--- a/scripts3.5
+++ b/scripts3.5
@@ -1,3 +1,3 @@
 import math
-print('Many functions', 5+6, 5*6,5/6,5-6)
-print(math.exp(5), math.exp(6))
+print('Many functions', 5 ** 6, 5*6,5/6,5-6)
+print(math.exp(6), math.exp(5))
